2005-01-04  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c,
	kaffe/kaffevm/systems/unix-pthreads/lock-impl.h:
	(KaffePThread_setBlockingCall, KaffePThread_clearBlockingCall):
	Defined two external functions to handle blocking syscalls (not
	interruptible by a signal).

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(jthreadedWaitPid): Advertise the thread subsystem that we cannot
	receive any suspend signal in that syscall.
	
	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c	
	kaffe/kaffevm/systems/unix-pthreads/thread-internal.h: Handle the
	new blocking state.

2005-01-03  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/Reflect.java: Adapted expected output to match
	arraycopy.

	Reported by:  Guilhem Lavaux  <guilhem@kaffe.org>

2005-01-03  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/System.java (arraycopy): Moved error
	checking code from native part of the method into java part of 
	method's implementation. Improved exception messages.
	(arraycopy0) Renamed native part of the method accordingly.

	* test/internal/java/lang/System.java: Updated for new arraycopy
	implementation.

	* libraries/clib/native/System.c (java_lang_System_arraycopy):
	Renamed to java_lang_System_arraycopy0.

	* libraries/javalib/Klasses.jar.bootstrap: Regenerated.
	
2005-01-02  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/lock-impl.c
	(setBlockState): Protect the mutex locking against signal.
	
	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c,
	kaffe/kaffevm/systems/unix-pthreads/thread-internal.h
	(KaffePThread_AckAndWaitForResume): New function.
	(suspend_handler): Call directly KaffePThread_AckAndWaitForResume
	now.
	(KaffePThread_getSuspendSignal): Export the signal number
	corresponding to the suspend signal.
	(jthread_suspendall): Cleant up the semaphore sweep. Added a few
	assertion checking.
	(jthread_unsuspendall): Added a few assertion checking.